mask_len in XIGrabDevice is in 4-byte units (#23708)

X.Org Bug 23708 <http://bugs.freedesktop.org/show_bug.cgi?id=23708>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>